@@ -1,28 +1,44 @@
 package com.black.mulberry.core.util;
 
+import com.black.mulberry.core.exception.FileNotExistException;
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.io.IOUtils;
 import org.springframework.stereotype.Component;
+import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.net.URL;
+import java.util.Random;
 
 @Component
 @Slf4j
 public class IOUtil {
 
-    public byte[] getAllBytesByUrl(String fileUrl) throws IOException {
-        log.info("request get image");
+    public byte[] getAllBytesByUrl(String fileUrl) {
         try {
-            URL url = new URL(fileUrl);
-            try(InputStream inputStream = url.openStream()){
-                log.info("image successfully taken");
-                return inputStream.readAllBytes();
+            log.info("request get image");
+            InputStream inputStream = new FileInputStream(fileUrl);
+            return IOUtils.toByteArray(inputStream);
+        } catch (IOException e) {
+            log.error("fail to take image");
+            throw new FileNotExistException(e.getMessage());
+        }
+    }
+
+    public String saveImage(String path, MultipartFile file) {
+        log.info("Request save file to path: {}", path);
+        if (!file.isEmpty()) {
+            String fileName = System.currentTimeMillis() + "_" + file.getOriginalFilename();
+            File newFile = new File(path + fileName);
+            try {
+                file.transferTo(newFile);
+            } catch (IOException e) {
+                log.error("Fail to save image with filename: {}", file.getName());
+                throw new FileNotExistException("Fail to save image with filename: " + fileName);
             }
+            return fileName;
         }
-        catch (IOException e){
-            log.error("fail to get image");
-            throw new IOException("Exceptions during IO operations with URL: " + fileUrl, e);
-        }
+        log.error("Fail to save image");
+        throw new FileNotExistException("File not found or is Empty");
     }
 }
